--- a/public/VideoDepartmentSelector.html
+++ b/public/VideoDepartmentSelector.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -35,25 +34,6 @@
       cursor: pointer;
       margin: 2px 0 10px 0;
     }
-    .video-description:hover::after {
-      content: attr(data-fulltext);
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: white;
-      color: black;
-      padding: 20px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.3);
-      white-space: pre-wrap;
-      font-size: 1.1rem;
-      text-align: justify;
-      direction: rtl;
-      max-width: 500px;
-      z-index: 1050;
-    }
     .video-grid {
       display: flex;
       flex-wrap: wrap;
@@ -79,77 +59,47 @@
       cursor: pointer;
       margin: 5px 0 0 0;
     }
-    @media (max-width: 576px) {
-      .video-card {
-        width: 90%;
-      }
-    }
   </style>
 </head>
 <body>
   <div class="container text-center">
     <h3 class="mb-4">اختر القسم لعرض الفيديوهات</h3>
-    <div class="mb-3 d-flex justify-content-center gap-3">
-      <a href="index.html" class="btn btn-secondary">الرجوع إلى فهرس الأقسام</a>
-      <button class="btn btn-warning" onclick="requestDashboardAccess()">🔐 لوحة التحكم</button>
-    </div>
-    <select id="departmentSelect" class="form-select mb-3">
+    <select id="departmentSelect" class="form-select mb-3" onchange="renderFilteredVideos()">
       <option value="">-- اختر القسم --</option>
     </select>
-    <input id="searchInput" class="form-control mb-4" type="text" placeholder="ابحث بعنوان أو وصف الفيديو..." disabled>
-    <div id="videoContainer" class="video-grid">
-      <p class="text-muted">🔍 يرجى اختيار قسم لعرض الفيديوهات</p>
-    </div>
-    <div class="text-center mt-4">
-      <a href="index.html" class="btn btn-secondary">الرجوع إلى فهرس الأقسام</a>
-    </div>
+    <input id="searchInput" class="form-control mb-4" type="text" placeholder="ابحث بعنوان أو وصف الفيديو..." oninput="renderFilteredVideos()">
+    <div id="videoContainer" class="video-grid"></div>
   </div>
+
 <script>
+const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let videos = [];
 
 async function fetchVideos() {
   try {
-    const res = await fetch('https://video-dashboard-backend.onrender.com/api/videos');
+    const res = await fetch(`${API_BASE}/api/videos`);
     videos = await res.json();
     populateDepartmentOptions();
+    renderFilteredVideos();
   } catch (err) {
     console.error('فشل تحميل الفيديوهات:', err);
   }
 }
 
-function renderVideos() {
-  const department = document.getElementById('departmentSelect').value;
-  const query = document.getElementById('searchInput').value.trim().toLowerCase();
-  const container = document.getElementById('videoContainer');
-  container.innerHTML = '';
+function populateDepartmentOptions() {
+  const departmentCounts = videos.reduce((acc, video) => {
+    acc[video.department] = (acc[video.department] || 0) + 1;
+    return acc;
+  }, {});
 
-  if (!department) {
-    container.innerHTML = '<p class="text-muted">🔍 يرجى اختيار قسم لعرض الفيديوهات</p>';
-    return;
-  }
+  const departmentSelect = document.getElementById('departmentSelect');
+  departmentSelect.innerHTML = '<option value="">-- اختر القسم --</option>';
 
-  const filtered = videos.filter(v => 
-    (!department || v.department === department) &&
-    (v.title.toLowerCase().includes(query) || v.description.toLowerCase().includes(query))
-  );
-
-  filtered.forEach(video => {
-    const card = document.createElement('div');
-    card.className = 'video-card';
-
-    const title = `<div class="video-title">${video.title}</div>`;
-    const description = `<div class="video-description" data-fulltext="${video.description}">${video.description}</div>`;
-
-    let media = '';
-    if (video.link.includes('youtube.com') || video.link.includes('youtu.be')) {
-      media = `<iframe src="https://www.youtube.com/embed/${extractYouTubeID(video.link)}" allowfullscreen></iframe>`;
-    } else {
-      media = `<video controls src="${video.link}" onloadedmetadata="this.nextElementSibling.textContent = formatDuration(this.duration)"></video><div class="video-duration"></div>`;
-    }
-
-    const popout = `<button class="popout-button" onclick="window.open('${video.link}', '_blank', 'width=800,height=600')">انقر لعرض الفيديو</button>`;
-    card.innerHTML = title + description + media + popout;
-    container.appendChild(card);
+  Object.entries(departmentCounts).forEach(([dept, count]) => {
+    const option = document.createElement('option');
+    option.value = dept;
+    option.textContent = `${dept} (${count})`;
+    departmentSelect.appendChild(option);
   });
 }
 
@@ -164,106 +114,46 @@ function formatDuration(seconds) {
   return `${minutes}:${secs.toString().padStart(2, '0')}`;
 }
 
-function populateDepartmentOptions() {
-  const departmentCounts = videos.reduce((acc, video) => {
-    acc[video.department] = (acc[video.department] || 0) + 1;
-    return acc;
-  }, {});
+function renderFilteredVideos() {
+  const department = document.getElementById('departmentSelect').value;
+  const query = document.getElementById('searchInput').value.trim().toLowerCase();
+  const container = document.getElementById('videoContainer');
+  container.innerHTML = '';
 
-  const departmentSelect = document.getElementById('departmentSelect');
-  departmentSelect.innerHTML = '<option value="">-- اختر القسم --</option>';
+  if (!department) {
+    container.innerHTML = '<p class="text-muted">يرجى اختيار قسم لعرض الفيديوهات</p>';
+    return;
+  }
 
-  const departments = [
-    "قسم المساقات الخدمية",
-    "قسم اللغة العربية",
-    "قسم اللغة الانجليزية",
-    "قسم الترجمة",
-    "قسم علم النفس",
-    "نظام ملف المادة",
-    "نظام المخرجات التعليمية (الواصفات)",
-    "نظام السيرة الذاتية",
-    "صفحة الموظف",
-    "البوابة الالكترونية"
-  ];
+  const filtered = videos.filter(v => 
+    v.department === department &&
+    (v.title.toLowerCase().includes(query) || v.description.toLowerCase().includes(query))
+  );
 
-  departments.forEach(dept => {
-    const count = departmentCounts[dept] || 0;
-    const option = document.createElement('option');
-    option.value = dept;
-    option.textContent = `${dept} (${count})`;
-    departmentSelect.appendChild(option);
-  });
-}
+  if (filtered.length === 0) {
+    container.innerHTML = '<div class="alert alert-info">لا توجد فيديوهات مطابقة.</div>';
+    return;
+  }
 
-function requestDashboardAccess() {
-  const input = document.createElement('input');
-  input.type = 'password';
-  input.placeholder = '🔐 أدخل كلمة المرور';
-  input.style = 'padding:10px; width:100%; font-size:1rem;';
-  const wrapper = document.createElement('div');
-  wrapper.appendChild(input);
-  const result = confirmPassword(wrapper, input);
-}
+  filtered.forEach(video => {
+    const card = document.createElement('div');
+    card.className = 'video-card';
 
-function confirmPassword(wrapper, input) {
-  const modal = document.createElement('div');
-  modal.style = 'position:fixed;top:0;left:0;width:100vw;height:100vh;background-color:rgba(0,0,0,0.5);display:flex;align-items:center;justify-content:center;z-index:9999;';
+    const title = `<div class="video-title">${video.title}</div>`;
+    const description = `<div class="video-description" title="${video.description}">${video.description}</div>`;
 
-  const box = document.createElement('div');
-  box.style = 'background:white;padding:30px;border-radius:12px;max-width:400px;width:90%;text-align:center;';
-  box.innerHTML = '<h5>🔐 أدخل كلمة المرور</h5>';
-  box.appendChild(wrapper);
-
-  const btn = document.createElement('button');
-  btn.className = 'btn btn-primary mt-3';
-  btn.textContent = 'دخول';
-  box.appendChild(btn);
-
-  const cancel = document.createElement('button');
-  cancel.className = 'btn btn-secondary mt-3 ms-2';
-  cancel.textContent = 'إلغاء';
-  box.appendChild(cancel);
-
-  modal.appendChild(box);
-  document.body.appendChild(modal);
-
-  input.focus();
-
-  const handleLogin = () => {
-    const password = input.value;
-    fetch('https://video-dashboard-backend.onrender.com/api/verify-password', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ password })
-    })
-    .then(res => {
-      if (res.ok) {
-        document.body.removeChild(modal);
-        window.location.href = 'dashboard.html';
-      } else {
-        alert("❌ كلمة المرور غير صحيحة");
-      }
-    })
-    .catch(() => alert("❌ حدث خطأ في الاتصال بالخادم"));
-  };
-
-  btn.onclick = handleLogin;
-  cancel.onclick = () => {
-    document.body.removeChild(modal);
-  };
-
-  input.addEventListener('keydown', e => {
-    if (e.key === 'Enter') {
-      handleLogin();
+    let media = '';
+    if (video.link.includes('youtube.com') || video.link.includes('youtu.be')) {
+      media = `<iframe src="https://www.youtube.com/embed/${extractYouTubeID(video.link)}" allowfullscreen></iframe>`;
+    } else {
+      media = `<video controls src="${video.link}" onloadedmetadata="this.nextElementSibling.textContent = formatDuration(this.duration)"></video><div class="video-duration"></div>`;
     }
+
+    const popout = `<button class="popout-button" onclick="window.open('${video.link}', '_blank', 'width=800,height=600')">انقر لعرض الفيديو</button>`;
+    card.innerHTML = title + description + media + popout;
+    container.appendChild(card);
   });
 }
-
-document.getElementById('departmentSelect').addEventListener('change', () => {
-  document.getElementById('searchInput').disabled = false;
-  renderVideos();
-});
-document.getElementById('searchInput').addEventListener('input', renderVideos);
 
 fetchVideos();
 </script>
