--- a/public/edit.html
+++ b/public/edit.html
@@ -2,66 +2,118 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>تعديل الفيديوهات - Quill</title>
+  <title>تعديل الفيديوهات</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
-  
-  <!-- مكتبة Quill -->
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-  
+
   <style>
-    body { background-color: #f7f9fc; padding: 30px; font-family: 'Segoe UI', sans-serif; }
-    .video-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 20px; }
-    .video-card { background: white; padding: 15px; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); position: relative; }
-    .video-card h5 { height: 3em; line-height: 1.5em; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
-    .action-buttons { position: absolute; top: 15px; left: 15px; display: flex; gap: 10px; }
-    #editor { height: 200px; background: white; }
+    body {
+      background-color: #f4f6fb;
+      padding: 20px;
+      font-family: 'Segoe UI', sans-serif;
+    }
+    .video-card {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      padding: 10px;
+      margin: 5px;
+      width: 300px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      height: auto;
+    }
+    .video-title {
+      font-weight: bold;
+      margin: 0;
+    }
+    .video-description {
+      height: 20px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      cursor: pointer;
+      margin: 2px 0 10px 0;
+    }
+    .video-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+    }
+    video, iframe {
+      width: 100%;
+      height: 200px;
+      margin: 0;
+    }
+    .popout-button {
+      background-color: #0d6efd;
+      color: white;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 5px;
+    }
+    .action-buttons {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 10px;
+    }
+    #editor {
+      height: 200px;
+      background: white;
+    }
   </style>
 </head>
 <body>
-<div class="container">
-  <h3>تعديل الفيديوهات</h3>
-  <div id="videoContainer" class="video-grid"></div>
-</div>
+  <div class="container text-center">
+    <h3 class="mb-4">إدارة وتعديل الفيديوهات</h3>
+    <div class="mb-3 d-flex justify-content-center gap-3">
+      <a href="add.html" class="btn btn-success">➕ إضافة فيديو جديد</a>
+      <a href="dashboard.html" class="btn btn-warning">🔐 لوحة التحكم</a>
+    </div>
+    <select id="departmentSelect" class="form-select mb-3" style="max-width: 300px; margin: auto;">
+      <option value="">-- اختر القسم --</option>
+    </select>
+    <input id="searchInput" class="form-control mb-4" type="text" placeholder="ابحث بعنوان أو وصف الفيديو..." disabled>
+    <div id="videoContainer" class="video-grid"></div>
+  </div>
 
-<!-- نافذة تعديل الفيديو -->
-<div class="modal fade" id="editModal" tabindex="-1">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">تعديل الفيديو</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body">
-        <input type="hidden" id="editId">
-        <label>العنوان</label>
-        <input type="text" class="form-control mb-2" id="editTitle">
-
-        <label>الوصف</label>
-        <div id="editor"></div>
-
-        <label class="mt-3">رابط الفيديو</label>
-        <input type="text" class="form-control mb-2" id="editUrl">
-
-        <label>القسم</label>
-        <input type="text" class="form-control mb-2" id="editDept">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إغلاق</button>
-        <button type="button" class="btn btn-primary" onclick="saveEdit()">حفظ</button>
+  <!-- نافذة تعديل الفيديو -->
+  <div class="modal fade" id="editModal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">تعديل الفيديو</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <input type="hidden" id="editId">
+          <label>العنوان</label>
+          <input type="text" class="form-control mb-2" id="editTitle">
+          <label>الوصف</label>
+          <div id="editor"></div>
+          <label class="mt-3">رابط الفيديو</label>
+          <input type="text" class="form-control mb-2" id="editUrl">
+          <label>القسم</label>
+          <input type="text" class="form-control mb-2" id="editDept">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إغلاق</button>
+          <button type="button" class="btn btn-primary" onclick="saveEdit()">حفظ</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<!-- مكتبة Quill -->
 <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 <script>
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let videos = [];
-
-// تهيئة محرر Quill مع أدوات الروابط
-const quill = new Quill('#editor', {
+let quill = new Quill('#editor', {
   theme: 'snow',
   modules: {
     toolbar: [
@@ -75,25 +127,84 @@ const quill = new Quill('#editor', {
 });
 
 async function fetchVideos() {
-  const res = await fetch(`${API_BASE}/api/videos`);
-  videos = await res.json();
-  renderVideos();
+  try {
+    const res = await fetch(`${API_BASE}/api/videos`);
+    videos = await res.json();
+    populateDepartmentOptions();
+  } catch (err) {
+    console.error('فشل تحميل الفيديوهات:', err);
+  }
+}
+
+function populateDepartmentOptions() {
+  const departmentCounts = videos.reduce((acc, video) => {
+    const dep = video.department;
+    acc[dep] = (acc[dep] || 0) + 1;
+    return acc;
+  }, {});
+
+  const departmentSelect = document.getElementById('departmentSelect');
+  departmentSelect.innerHTML = '<option value="">-- اختر القسم --</option>';
+
+  Object.entries(departmentCounts).forEach(([dept, count]) => {
+    const option = document.createElement('option');
+    option.value = dept;
+    option.textContent = `${dept} (${count})`;
+    departmentSelect.appendChild(option);
+  });
 }
 
 function renderVideos() {
+  const department = document.getElementById('departmentSelect').value;
+  const query = document.getElementById('searchInput').value.trim().toLowerCase();
   const container = document.getElementById('videoContainer');
   container.innerHTML = '';
-  videos.forEach(video => {
-    container.innerHTML += `
-      <div class="video-card">
-        <h5>${video.title}</h5>
-        <p>${video.description?.substring(0, 50) || ''}...</p>
-        <div class="action-buttons">
-          <button class="btn btn-warning btn-sm" onclick="openEditModal('${video._id}')">تعديل</button>
-        </div>
+
+  if (!department) return;
+
+  const filtered = videos.filter(v =>
+    v.department?.trim().toLowerCase() === department.trim().toLowerCase() &&
+    (v.title?.toLowerCase().includes(query) || v.description?.toLowerCase().includes(query))
+  );
+
+  if (filtered.length === 0) {
+    container.innerHTML = '<p class="text-muted">🚫 لا توجد فيديوهات مطابقة</p>';
+    return;
+  }
+
+  filtered.forEach(video => {
+    const card = document.createElement('div');
+    card.className = 'video-card';
+
+    const title = `<div class="video-title">${video.title}</div>`;
+    const description = `<div class="video-description" data-fulltext="${video.description}">${video.description}</div>`;
+
+    const link = video.url || '';
+    let media = '';
+
+    if (link.includes('youtube.com') || link.includes('youtu.be')) {
+      media = `<iframe src="https://www.youtube.com/embed/${extractYouTubeID(link)}" allowfullscreen></iframe>`;
+    } else {
+      media = `<video controls src="${link}"></video>`;
+    }
+
+    const popout = `<button class="popout-button" onclick="window.open('${link}', '_blank', 'width=800,height=600')">عرض الفيديو</button>`;
+
+    const actions = `
+      <div class="action-buttons">
+        <button class="btn btn-warning btn-sm" onclick="openEditModal('${video._id}')">تعديل</button>
+        <button class="btn btn-danger btn-sm" onclick="deleteVideo('${video._id}')">حذف</button>
       </div>
     `;
+
+    card.innerHTML = title + description + media + popout + actions;
+    container.appendChild(card);
   });
+}
+
+function extractYouTubeID(url) {
+  const match = url.match(/[?&]v=([^&#]*)|youtu\.be\/([^&#]*)/);
+  return match ? (match[1] || match[2]) : '';
 }
 
 function openEditModal(id) {
@@ -102,10 +213,7 @@ function openEditModal(id) {
   document.getElementById('editTitle').value = video.title;
   document.getElementById('editUrl').value = video.url;
   document.getElementById('editDept').value = video.department || '';
-
-  // تعيين الوصف في Quill
   quill.root.innerHTML = video.description || '';
-
   const modal = new bootstrap.Modal(document.getElementById('editModal'));
   modal.show();
 }
@@ -114,21 +222,32 @@ async function saveEdit() {
   const id = document.getElementById('editId').value;
   const updated = {
     title: document.getElementById('editTitle').value,
-    description: quill.root.innerHTML, // حفظ المحتوى كـ HTML
+    description: quill.root.innerHTML,
     url: document.getElementById('editUrl').value,
     department: document.getElementById('editDept').value
   };
-
   await fetch(`${API_BASE}/api/videos/${id}`, {
     method: 'PUT',
     headers: { 'Content-Type': 'application/json' },
     body: JSON.stringify(updated)
   });
-
   alert('✅ تم حفظ التعديلات');
   fetchVideos();
   bootstrap.Modal.getInstance(document.getElementById('editModal')).hide();
 }
+
+async function deleteVideo(id) {
+  if (!confirm('❌ هل أنت متأكد من حذف هذا الفيديو؟')) return;
+  await fetch(`${API_BASE}/api/videos/${id}`, { method: 'DELETE' });
+  alert('🗑️ تم حذف الفيديو');
+  fetchVideos();
+}
+
+document.getElementById('departmentSelect').addEventListener('change', () => {
+  document.getElementById('searchInput').disabled = false;
+  renderVideos();
+});
+document.getElementById('searchInput').addEventListener('input', renderVideos);
 
 fetchVideos();
 </script>
