--- a/public/edit.html
+++ b/public/edit.html
@@ -36,9 +36,6 @@
       cursor: pointer;
       margin: 2px 0 10px 0;
     }
-    .video-description + br {
-      line-height: 1.5;
-    }
     .video-grid {
       display: flex;
       flex-wrap: wrap;
@@ -84,15 +81,25 @@
     <div id="videoContainer" class="video-grid"></div>
   </div>
 
-  <!-- Modal عرض الوصف -->
+  <!-- نافذة عرض الوصف مع العنوان وأزرار التنقل -->
   <div class="modal fade" id="descModal" tabindex="-1">
-    <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">وصف الفيديو</h5>
+          <!-- عنوان الفيديو -->
+          <h5 class="modal-title" id="descTitle"></h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
+        <!-- هنا سيتم وضع الوصف -->
         <div class="modal-body" id="descContent" style="white-space: pre-wrap; text-align: justify;"></div>
+        <div class="modal-footer d-flex justify-content-between">
+          <!-- زر السابق -->
+          <button class="btn btn-secondary" id="prevBtn">⬅ السابق</button>
+          <!-- زر عرض الفيديو -->
+          <button class="btn btn-primary" id="viewVideoBtn">🎬 عرض الفيديو</button>
+          <!-- زر التالي -->
+          <button class="btn btn-secondary" id="nextBtn">التالي ➡</button>
+        </div>
       </div>
     </div>
   </div>
@@ -129,6 +136,10 @@
 <script>
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let videos = [];
+let currentSectionVideos = [];
+let currentIndex = 0;
+
+// محرر النصوص Quill
 let quill = new Quill('#editor', {
   theme: 'snow',
   modules: {
@@ -142,24 +153,24 @@ let quill = new Quill('#editor', {
   }
 });
 
+// جلب الفيديوهات من الخادم
 async function fetchVideos() {
-  try {
-    const res = await fetch(`${API_BASE}/api/videos`);
-    videos = await res.json();
-    populateDepartmentOptions();
-  } catch (err) {
-    console.error('فشل تحميل الفيديوهات:', err);
-  }
+  const res = await fetch(`${API_BASE}/api/videos`);
+  videos = await res.json();
+  populateDepartmentOptions();
 }
 
+// ملء قائمة الأقسام
 function populateDepartmentOptions() {
   const departmentCounts = videos.reduce((acc, video) => {
     const dep = video.department;
     acc[dep] = (acc[dep] || 0) + 1;
     return acc;
   }, {});
+
   const departmentSelect = document.getElementById('departmentSelect');
   departmentSelect.innerHTML = '<option value="">-- اختر القسم --</option>';
+
   Object.entries(departmentCounts).forEach(([dept, count]) => {
     const option = document.createElement('option');
     option.value = dept;
@@ -168,46 +179,47 @@ function populateDepartmentOptions() {
   });
 }
 
+// عرض الفيديوهات
 function renderVideos() {
   const department = document.getElementById('departmentSelect').value;
   const query = document.getElementById('searchInput').value.trim().toLowerCase();
   const container = document.getElementById('videoContainer');
   container.innerHTML = '';
+
   if (!department) return;
 
-  const filtered = videos.filter(v =>
+  currentSectionVideos = videos.filter(v =>
     v.department?.trim().toLowerCase() === department.trim().toLowerCase() &&
     (v.title?.toLowerCase().includes(query) || v.description?.toLowerCase().includes(query))
   );
 
-  if (filtered.length === 0) {
+  if (currentSectionVideos.length === 0) {
     container.innerHTML = '<p class="text-muted">🚫 لا توجد فيديوهات مطابقة</p>';
     return;
   }
 
-  filtered.forEach(video => {
+  currentSectionVideos.forEach((video, index) => {
     const card = document.createElement('div');
     card.className = 'video-card';
 
-    const title = `<div class="video-title"><strong>عنوان الفيديو:</strong> ${video.title}</div>`;
-    const description = `<div class="video-description" onclick="showDescription('${escapeHtml(video.description)}')"><strong>وصف الفيديو:</strong> ${video.description}</div><br>`;
+    // عنوان الفيديو مع النص "عنوان الفيديو:"
+    const title = `<div class="video-title">عنوان الفيديو: ${video.title}</div>`;
+    // الوصف مع النص "وصف الفيديو:" والنقر لعرض النافذة
+    const description = `<div class="video-description" onclick="showDescription(${index})">وصف الفيديو: ${video.description}</div><br>`;
 
+    // معاينة الفيديو
     const link = video.url || '';
     let media = '';
     if (link.includes('youtube.com') || link.includes('youtu.be')) {
       media = `<iframe src="https://www.youtube.com/embed/${extractYouTubeID(link)}" allowfullscreen></iframe>`;
-    } else if (link.includes('drive.google.com/file/d/')) {
-      const match = link.match(/\/file\/d\/(.*?)(\/|$)/);
-      if (match) {
-        media = `<iframe src="https://drive.google.com/file/d/${match[1]}/preview" allowfullscreen></iframe>`;
-      }
-    } else if (link) {
-      media = `<video controls src="${link}"></video>`;
     } else {
-      media = `<p class="text-muted">🚫 لا يوجد معاينة</p>`;
+      media = `<video controls src="${link}"></video>`;
     }
 
+    // زر عرض الفيديو في نافذة منبثقة
     const popout = `<button class="popout-button" onclick="window.open('${link}', '_blank', 'width=800,height=600')">عرض الفيديو</button>`;
+
+    // أزرار تعديل وحذف
     const actions = `
       <div class="action-buttons">
         <button class="btn btn-warning btn-sm" onclick="openEditModal('${video._id}')">تعديل</button>
@@ -220,21 +232,40 @@ function renderVideos() {
   });
 }
 
-function escapeHtml(text) {
-  return text?.replace(/"/g, '&quot;').replace(/'/g, '&#39;') || '';
-}
-
+// استخراج ID من رابط يوتيوب
 function extractYouTubeID(url) {
   const match = url.match(/[?&]v=([^&#]*)|youtu\.be\/([^&#]*)/);
   return match ? (match[1] || match[2]) : '';
 }
 
-function showDescription(desc) {
-  document.getElementById('descContent').innerHTML = `<strong>وصف الفيديو:</strong> ${desc}`;
+// عرض الوصف داخل النافذة
+function showDescription(index) {
+  currentIndex = index;
+  const video = currentSectionVideos[index];
+  document.getElementById('descTitle').textContent = video.title;
+  document.getElementById('descContent').innerHTML = video.description;
+  document.getElementById('viewVideoBtn').onclick = () => {
+    window.open(video.url, '_blank', 'width=800,height=600');
+  };
   const modal = new bootstrap.Modal(document.getElementById('descModal'));
   modal.show();
 }
 
+// التنقل للسابق
+document.getElementById('prevBtn').addEventListener('click', () => {
+  if (currentIndex > 0) {
+    showDescription(currentIndex - 1);
+  }
+});
+
+// التنقل للتالي
+document.getElementById('nextBtn').addEventListener('click', () => {
+  if (currentIndex < currentSectionVideos.length - 1) {
+    showDescription(currentIndex + 1);
+  }
+});
+
+// فتح نافذة تعديل الفيديو
 function openEditModal(id) {
   const video = videos.find(v => v._id === id);
   document.getElementById('editId').value = video._id;
@@ -246,6 +277,7 @@ function openEditModal(id) {
   modal.show();
 }
 
+// حفظ التعديل
 async function saveEdit() {
   const id = document.getElementById('editId').value;
   const updated = {
@@ -264,6 +296,7 @@ async function saveEdit() {
   bootstrap.Modal.getInstance(document.getElementById('editModal')).hide();
 }
 
+// حذف الفيديو
 async function deleteVideo(id) {
   if (!confirm('❌ هل أنت متأكد من حذف هذا الفيديو؟')) return;
   await fetch(`${API_BASE}/api/videos/${id}`, { method: 'DELETE' });
@@ -271,12 +304,14 @@ async function deleteVideo(id) {
   fetchVideos();
 }
 
+// أحداث التغيير في الفلاتر
 document.getElementById('departmentSelect').addEventListener('change', () => {
   document.getElementById('searchInput').disabled = false;
   renderVideos();
 });
 document.getElementById('searchInput').addEventListener('input', renderVideos);
 
+// تحميل البيانات عند فتح الصفحة
 fetchVideos();
 </script>
 </body>
